// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders button with text correctly 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Click Me
    </p>
  </button>
</div>
`;

exports[`Button Component renders button without text correctly 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Button Component renders disabled button correctly 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Button Component renders loading button correctly 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</div>
`;
